=================
Changes for Crate
=================

Unreleased
==========

2015/09/08 0.51.2
=================

 - Updated crate-admin to 0.14.4 which includes the following changes:

   - updated Intercom to support new messaging features. The Intercom service is 
     disabled if UDC is disabled on the Crate server.

 - Fixed handling of non-deterministic functions

 - Added Usage Data Collector ``udc`` column to ``sys.cluster`` table to 
   indicate its configured settings.

 - Updated crash to version 0.14.0 which contains the following changes:

   - Fixed output tabular format bug which results in wrong representation
     of a string containing a floating point value.

   - Updated wording of the cluster check command output.

   - Added the check command which queries the ``sys.checks`` table for
     cluster checks

   - updated crate-python to 0.13.4

 - Fixed an issue that could kill long running queries on shards with few
   segments containing huge amounts of documents

2015/08/13 0.51.1
=================

 - Improved retry logic of EC2 unicast host discovery mechanism

 - Updated crate-admin to 0.14.3 which includes the following changes:

   - fixed line wrapping in console result table

 - Fixed an issue which could cause the blob recovery process to hang under some
   rare circumstances

 - Fixed an issue that caused ``COPY TO .. s3`` statements to leave the cluster
   in an inaccessible state

 - Fixed a deadlock that could occur if queries with high offset or limit were
   executed concurrently

 - Fixed an issue that could cause a count function on partitioned tables
   to cause an error if a partition was deleted concurrently.

2015/07/29 0.51.0
=================

 - Added the ``KILL 'job_id'`` statement.

 - Fixed a bug with the kill of collectors when ``KILL ALL`` is called.

 - Added support for unicast host discovery via EC2 API

 - BREAKING CHANGE
   Connections to AWS S3 for ``COPY FROM`` and ``COPY TO`` are now using HTTPS.