@@ -31,15 +31,6 @@ public class StringUtils {
     public static final Splitter PATH_SPLITTER = Splitter.on('.');
     public static final Joiner PATH_JOINER = Joiner.on('.');
 
-    public static String dottedToSqlPath(String dottedPath) {
-        Iterable<String> splitted = PATH_SPLITTER.split(dottedPath);
-        Iterator<String> iter = splitted.iterator();
-        StringBuilder builder = new StringBuilder(iter.next());
-        while (iter.hasNext()) {
-            builder.append("['").append(iter.next()).append("']");
-        }
-        return builder.toString();
-    }
 
     /**
      * Return the common ancestors of a list of fields.<br>
